# ppinject

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-pypi.yml
docs/: ARCHITECTURE.md  INDEX.md  PUBLISHING.md  ROADMAP.md  USAGE.md
examples/: Template_Slide.pptx  render_template_slide.py
research/: Editing PowerPoint Files Via XML.md
src/ppinject/: __init__.py  highlevel.py  injector.py
tests/: test_package.py
